force-app/main/default/objects/Campaign/fields/Calculated_Status__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Status__c</fullName>
    <formula>IF( 
StartDate &gt;  TODAY() , &quot;Not started yet&quot;
, IF(
EndDate &lt;  TODAY() , &quot;Finished&quot;
, &quot;In Progress&quot;

)


)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>