force-app/main/default/objects/Campaign/fields/Campaign_Category__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Category__c</fullName>
    <label>Campaign Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mono Contact</fullName>
            </value>
            <value>
                <fullName>Direct Marketing</fullName>
            </value>
            <value>
                <fullName>Competition/MGM/Existing Customer Survey</fullName>
            </value>
            <value>
                <fullName>New Customer Survey</fullName>
            </value>
            <value>
                <fullName>Parent Campaign</fullName>
            </value>
            <value>
                <fullName>CRM System Campaign</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Partner Loyalty Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>