force-app/main/default/objects/Campaign/fields/campaignID__c.field-meta.xml
<CustomField>
    <fullName>campaignID__c</fullName>
    <description>populated</description>
    <externalId>true</externalId>
    <inlineHelpText>Use this code to link this campaign inside Responsys</inlineHelpText>
    <label>External Campaign Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>