force-app/main/default/objects/Campaign/fields/Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channel__c</fullName>
    <inlineHelpText>Select which channels the Campaign will be distributed</inlineHelpText>
    <label>Communication Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Postal</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Leaflet/Coupon</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Face-to-face</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Other Media (TV/Radio)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>