force-app/main/default/objects/Campaign/fields/conference360__Event_Auto_Sync__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Auto_Sync__c</fullName>
    <inlineHelpText>When Campaign Members are added, they will be automatically added as Attendees to the related Event with their statuses kept in-sync from Campaign Member to Attendee.</inlineHelpText>
    <label>Event Auto-Sync</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>