force-app/main/default/objects/Campaign/fields/Contact_Details_Required__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this option if contact details are required for a redemption</inlineHelpText>
    <label>Contact Details Required</label>
    <type>Checkbox</type>
</CustomField>