force-app/main/default/objects/Campaign/fields/COS_Campaign__c.field-meta.xml
<CustomField>
    <fullName>COS_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this box to designate this as COS (group Level) Campaign</description>
    <inlineHelpText>Tick this box to designate this as COS (group Level) Campaign</inlineHelpText>
    <label>COS Campaign</label>
    <type>Checkbox</type>
</CustomField>