force-app/main/default/objects/Campaign/fields/Group_Booking__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Booking</label>
    <referenceTo>Group_Booking__c</referenceTo>
    <relationshipLabel>Redemption Campaign</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>