force-app/main/default/objects/Campaign/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>% Value Off (Brand)</fullName>
            </value>
            <value>
                <fullName>% Value Off (Village)</fullName>
            </value>
            <value>
                <fullName>Free Gift/Food/Drink (Brand)</fullName>
            </value>
            <value>
                <fullName>Free Gift/Food/Drink (Village)</fullName>
            </value>
            <value>
                <fullName>Money Off (Brand)</fullName>
            </value>
            <value>
                <fullName>Money Off (Village)</fullName>
            </value>
            <value>
                <fullName>None/Informational</fullName>
            </value>
            <value>
                <fullName>Free Services</fullName>
            </value>
            <value>
                <fullName>Parent Campaign</fullName>
            </value>
            <value>
                <fullName>Cash Back (Brand)</fullName>
            </value>
            <value>
                <fullName>Cash Back (Village)</fullName>
            </value>
            <value>
                <fullName>Partner Miles/Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>