force-app/main/default/objects/Campaign/fields/Includes_SCS_Experience__c.field-meta.xml
<CustomField>
    <fullName>Includes_SCS_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes SCS Experience?</label>
    <type>Checkbox</type>
</CustomField>