force-app/main/default/objects/Campaign/fields/Multi_Channel_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Multi_Channel_Campaign__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this option if the same campaign barcode will be used across all channels</inlineHelpText>
    <label>Multi-Channel Campaign</label>
    <type>Checkbox</type>
</CustomField>