force-app/main/default/objects/Campaign/fields/Multi_Village_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Multi_Village_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this option if the same campaign barcode will be valid across multiple Villages</inlineHelpText>
    <label>Multi-Village Campaign</label>
    <type>Checkbox</type>
</CustomField>