force-app/main/default/objects/Campaign/fields/Parent_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign_ID__c</fullName>
    <description>Value is entered when a Redeemable Campaign is created using the Wizard.</description>
    <inlineHelpText>Only populated if the group (parent) campaign is a multi-village campaign</inlineHelpText>
    <label>Parent Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>