force-app/main/default/objects/Campaign/fields/QR_Code_Image__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Image__c</fullName>
    <formula>IF( Multi_Village_Campaign__c = true &amp;&amp;  RecordType.DeveloperName = &apos;Group_Campaign&apos; &amp;&amp;  NOT(ISBLANK(X18_digit_id__c)) , IMAGE(&apos;https://chart.googleapis.com/chart?chs=256x256&amp;cht=qr&amp;chl=&apos;+  X18_digit_id__c  , &apos;QR Code&apos; ), 

IF(  Parent.Multi_Village_Campaign__c  = false &amp;&amp;  RecordType.DeveloperName = &apos;Redeemable_Campaign&apos; &amp;&amp;  NOT(ISBLANK(X18_digit_id__c)), IMAGE(&apos;https://chart.googleapis.com/chart?chs=256x256&amp;cht=qr&amp;chl=&apos;+ X18_digit_id__c , &apos;QR Code&apos; ), 

IF (RecordType.DeveloperName = &apos;Group_Campaign&apos; &amp;&amp;  NOT(ISBLANK(X18_digit_id__c)), &quot;&lt;&lt;QR codes at Group Campaign level are only available for Multi-Village Campaigns&gt;&gt;&quot;, IMAGE(&apos;https://chart.googleapis.com/chart?chs=256x256&amp;cht=qr&amp;chl=&apos;+ Parent.X18_digit_id__c , &apos;QR Code&apos; ) )))</formula>
    <label>QR Code Image</label>
    <type>Text</type>
</CustomField>