force-app/main/default/objects/Campaign/fields/Redemptions_Transfered__c.field-meta.xml
<CustomField>
    <fullName>Redemptions_Transfered__c</fullName>
    <label>Redemptions Transfered</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>