force-app/main/default/objects/Campaign/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <inlineHelpText>Please enter the target audience of your campaign</inlineHelpText>
    <label>Target Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trade Partnerships</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Shopping Express</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Car Rental</fullName>
            </value>
            <value>
                <fullName>VIP Customer</fullName>
            </value>
            <value>
                <fullName>Database Customer</fullName>
            </value>
            <value>
                <fullName>Prospective Customer</fullName>
            </value>
            <value>
                <fullName>Parent Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>