force-app/main/default/objects/Campaign/fields/Test_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Test_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Idenitifies if this campaign is for test purposes only?</inlineHelpText>
    <label>Test Campaign</label>
    <type>Checkbox</type>
</CustomField>