force-app/main/default/objects/Campaign/fields/Total_Campaign_Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Transaction_Count__c</fullName>
    <label>Total Campaign Transaction Count</label>
    <summaryForeignKey>FF123_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>