force-app/main/default/objects/Campaign/fields/Total_Campaign_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Transaction_Value__c</fullName>
    <description>Sum of all the FF123 Transaction values</description>
    <label>Total Campaign Transaction Value</label>
    <summarizedField>FF123_Transaction__c.Transaction_Value__c</summarizedField>
    <summaryForeignKey>FF123_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>