force-app/main/default/objects/Campaign/fields/Total_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Total_Redemptions__c</fullName>
    <description>Count of Promotion redemptions</description>
    <label>Total Redemptions</label>
    <summaryForeignKey>Promotion_Redemption__c.Redeemable_Campaign__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>