force-app/main/default/objects/Campaign/fields/Transfer_Code__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Code__c</fullName>
    <formula>IF( Multi_Village_Campaign__c = true &amp;&amp; RecordType.DeveloperName = &apos;Group_Campaign&apos; &amp;&amp; NOT(ISBLANK(X18_digit_id__c)) , X18_digit_id__c, 

IF( Parent.Multi_Village_Campaign__c = false &amp;&amp; RecordType.DeveloperName = &apos;Redeemable_Campaign&apos; &amp;&amp; NOT(ISBLANK(X18_digit_id__c)), X18_digit_id__c , 

IF (RecordType.DeveloperName = &apos;Group_Campaign&apos; &amp;&amp; NOT(ISBLANK(X18_digit_id__c)), &quot;&quot;, Parent.X18_digit_id__c )))</formula>
    <label>Transfer Code</label>
    <type>Text</type>
</CustomField>