force-app/main/default/objects/Campaign/fields/Unique_Redeemable_Campaign_Field__c.field-meta.xml
<CustomField>
    <fullName>Unique_Redeemable_Campaign_Field__c</fullName>
    <description>Populated when a Redeemable Campaign is created to ensure the campaign is unique.

This field is made up of Parent Campaign ID, Village, Channel</description>
    <label>Unique Redeemable Campaign Field</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>