force-app/main/default/objects/Campaign/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>only valid for redeemable campaigns</description>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>