force-app/main/default/objects/Campaign/fields/Villages__c.field-meta.xml
<CustomField>
    <fullName>Villages__c</fullName>
    <inlineHelpText>Select the Village(s) in which this Campaign will be valid for</inlineHelpText>
    <label>Villages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bicester</fullName>
            </value>
            <value>
                <fullName>Fidenza</fullName>
            </value>
            <value>
                <fullName>Ingolstadt</fullName>
            </value>
            <value>
                <fullName>Kildare</fullName>
            </value>
            <value>
                <fullName>La Roca</fullName>
            </value>
            <value>
                <fullName>Las Rozas</fullName>
            </value>
            <value>
                <fullName>La Vallée</fullName>
            </value>
            <value>
                <fullName>Maasmechelen</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Suzhou</fullName>
            </value>
            <value>
                <fullName>Wertheim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>