force-app/main/default/objects/Campaign/fields/VIP_2_0_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>VIP_2_0_Activity_ID__c</fullName>
    <description>The ID of the VIP activity (booking or marketing activity) that the promo redemptions were migrated to</description>
    <externalId>true</externalId>
    <label>VIP 2.0 Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>