force-app/main/default/objects/Campaign/fields/X18_digit_id__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_id__c</fullName>
    <description>Populated by a workflow as the CASESAFEID() uses too many characters in a formula and we need to display the 18 digit id in QR codes</description>
    <label>18 digit id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>