force-app/main/default/objects/Campaign/fields/X18_Id_CaseSafe__c.field-meta.xml
<CustomField>
    <fullName>X18_Id_CaseSafe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18_Id_CaseSafe</label>
    <type>Text</type>
</CustomField>