force-app/main/default/objects/Campaign/recordTypes/Group_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Group_Campaign</fullName>
    <active>true</active>
    <description>A Campaign setup at Group Level (you cannot redeem against group campaigns)</description>
    <label>Group Campaign</label>
</RecordType>