force-app/main/default/objects/Campaign/recordTypes/MICE_Redeemable_Campaign.recordType-meta.xml
<RecordType>
    <fullName>MICE_Redeemable_Campaign</fullName>
    <active>true</active>
    <label>MICE Redeemable Campaign</label>
</RecordType>