force-app/main/default/objects/Campaign/recordTypes/Redeemable_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Redeemable_Campaign</fullName>
    <active>true</active>
    <description>A Campaign setup at Village Level used to redeem promotions</description>
    <label>Redeemable Campaign</label>
</RecordType>