force-app/main/default/objects/Campaign/recordTypes/Tourism.recordType-meta.xml
<RecordType>
    <fullName>Tourism</fullName>
    <active>true</active>
    <description>All Tourism Responsys campaigns</description>
    <label>Tourism</label>
</RecordType>