force-app/main/default/objects/Campaign/listViews/Bicester_Group_Campaigns.listView-meta.xml
<ListView>
    <fullName>Bicester_Group_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Group_Campaign</value>
    </filters>
    <filters>
        <field>COS_Campaign__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Villages__c</field>
        <operation>includes</operation>
        <value>Bicester</value>
    </filters>
    <label>Bicester Group Campaigns</label>
    <sharedTo>
        <group>Location_Bicester</group>
    </sharedTo>
</ListView>