force-app/main/default/objects/Campaign/listViews/COS_Redeemable_Campaigns.listView-meta.xml
<ListView>
    <fullName>COS_Redeemable_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Calculated_Status__c</columns>
    <columns>Villages__c</columns>
    <columns>Partner__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Redeemable_Campaign</value>
    </filters>
    <filters>
        <field>COS_Campaign__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>COS Redeemable Campaigns</label>
    <sharedTo>
        <roleAndSubordinates>Group_TIC</roleAndSubordinates>
        <roleAndSubordinates>Group_Tourism</roleAndSubordinates>
    </sharedTo>
</ListView>