force-app/main/default/objects/Campaign/listViews/Ingolstadt_Group_Campaigns.listView-meta.xml
<ListView>
    <fullName>Ingolstadt_Group_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Calculated_Status__c</columns>
    <columns>Villages__c</columns>
    <columns>Village__c</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COS_Campaign__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Villages__c</field>
        <operation>includes</operation>
        <value>Ingolstadt</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Group_Campaign</value>
    </filters>
    <label>Ingolstadt Group Campaigns</label>
    <sharedTo>
        <roleAndSubordinates>German_Marketing</roleAndSubordinates>
    </sharedTo>
</ListView>