force-app/main/default/objects/Campaign/listViews/Ingolstadt_Redeemable_Campaigns.listView-meta.xml
<ListView>
    <fullName>Ingolstadt_Redeemable_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Calculated_Status__c</columns>
    <columns>Total_Redemptions__c</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COS_Campaign__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Ingolstadt</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Redeemable_Campaign</value>
    </filters>
    <label>Ingolstadt Redeemable Campaigns</label>
    <sharedTo>
        <roleAndSubordinates>German_Marketing</roleAndSubordinates>
    </sharedTo>
</ListView>