force-app/main/default/objects/Campaign/listViews/Kildare_Redeemable_Campaigns.listView-meta.xml
<ListView>
    <fullName>Kildare_Redeemable_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Village__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Calculated_Status__c</columns>
    <columns>Total_Redemptions__c</columns>
    <columns>Partner__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>COS_Campaign__c</columns>
    <columns>Total_Campaign_Transaction_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Redeemable_Campaign</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Kildare</value>
    </filters>
    <label>Kildare Redeemable Campaigns</label>
    <sharedTo>
        <roleAndSubordinates>Group_TIC</roleAndSubordinates>
        <roleAndSubordinates>Group_Tourism</roleAndSubordinates>
    </sharedTo>
</ListView>